src/test/scala/wacc/wacc_examples/invalid/semanticErr/while/control_flow/breakOutsideWhile.wacc
# break outside while loop

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int x = 0 ;
  break ;
  exit x 
end
